# sagasu

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: cli.rs  main.rs
