[package]
name = "sagasu"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
repository = "https://github.com/DoumanAsh/sagasu"
description = "Find files utility"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
walkdir = "2"
regex = "1"
termcolor = "1"

[dependencies.structopt]
version = "0.2"
features = ["wrap_help", "suggestions"]

[profile.release]
lto = true
opt-level = "z"
