[package]
name = "sagasu"
version = "0.3.1"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
repository = "https://github.com/DoumanAsh/sagasu"
description = "Find files utility"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
walkdir = "2"
regex = "1"
termcolor = "1"
arg = "0.2"
c-ffi = { version = "0.2", default-features = false }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
